# pydantic-chatcompletion

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
example/: book_info.py  doc_metadata.py  list_event_dates.py  movie_info.py  nested.py  user_details.py
pydantic_chatcompletion/: README.md  __init__.py
pydantic_chatcompletion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
