[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic_chatcompletion"
version = "0.0.3"
authors = [
  { name="Bill Kish", email="bk@jiggy.ai" },
]
dependencies=['openai', 'pydantic']
description = "Wrapper around OpenAI ChatCompletion that compels the language model to produce a valid Pydantic model as output via prompting and iterative error remediation.  The easiest way to go from unstructured text to structured Pydantic data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/jiggy-ai/pydantic-chatcompletion"
"Bug Tracker" = "https://github.com/jiggy-ai/pydantic-chatcompletion/issues"